add add-opens for java17 (#572)